--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>American History Trivia</title>
+        <title>The Office Trivia</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
 
-        <body>
+    <body background="assets/images/background.png">
+    
+    <div class="container">
+        <div class="Jumbotron">
+        </div>
+        <!-- <div class="row" id="start">
+            <button id="startButton">start game</button>
+        <div> -->
+        <div class="container" id="gameBody">
+            <button id="startButton">Start Game</button>
+            <div id="timer"></div>
+            <div id="question"></div>
+            <div id="options"></div>
+            <div class="correct"></div>
+            <div class="incorrect"></div>
+        </div>
+        
+</div>
 
 
 
-            <script src="assets/javascript/app.js"></script>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        </body>
+        <script src="assets/javascript/app.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    </body>
     </head>
 </html>
