--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="row" id="start">
             <button id="startButton">Start Game</button>
         </div>
+        <div class="container gameBody">
+            <div id="timer"></div>
+        </div>
         <div class="container gameBody" >
             <!-- <button id="startButton">Start Game</button> -->
             <div id="timer"></div>
