--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <div class="container gameBody">
             <div id="options"></div>
-            <div class="correct"></div>
-            <div class="incorrect"></div>
+            <div id="correct"></div>
+            <div id="incorrect"></div>
         </div>    
     </div>
 
